using vivr as list since provide much nicer api, keeping ids static