@@ -1,12 +1,7 @@
 package com.buildit.twitter;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Optional;
-import java.util.function.IntFunction;
-import java.util.function.Supplier;
-import java.util.stream.IntStream;
-import java.util.stream.Stream;
+import java.util.function.Function;
 
 import com.buildit.twitter.data.AuthorRepository;
 import com.buildit.twitter.data.IAuthorRepository;
@@ -18,24 +13,25 @@ import com.buildit.twitter.data.dto.Tweet;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import io.vavr.collection.List;
+
 @Configuration
 public class MockDataConfiguration {
 
   @Bean
   public IAuthorRepository author() {
-    ArrayList<String> names = new ArrayList<>(Arrays.asList("Thor", "Loki", "Hulk"));
-    Supplier<Optional<Stream<Author>>> authors = () -> Optional
-        .of(names.stream().map(name -> Author.builder().name(name).build()));
-    return AuthorRepository.builder().authors(authors).build();
+    List<String> names = List.of("Thor", "Loki", "Hulk");
+    List<Author> authors = names.map(name -> Author.builder().name(name).build());
+    return AuthorRepository.builder().authors(() -> Optional.of(authors.toJavaStream())).build();
   }
 
   @Bean
   public ITweetRepository tweet(IAuthorRepository authors) {
-    IntFunction<Tweet> makeTweet = (int id) -> {
+    Function<Integer, Tweet> makeTweet = (Integer id) -> {
       Author firstAuthor = authors.getAuthors().findFirst().get();
       return Tweet.builder().message("some message" + id).authorId(firstAuthor.getId()).build();
     };
-    Supplier<Optional<Stream<Tweet>>> tweets = () -> Optional.of(IntStream.range(0, 10).mapToObj(makeTweet));
-    return TweetRepository.builder().tweets(tweets).build();
+    List<Tweet> tweets = List.range(0, 10).map(makeTweet);
+    return TweetRepository.builder().tweets(() -> Optional.of(tweets.toJavaStream())).build();
   }
 }
